[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/UpgradePanel.gd" type="Script" id=1]

[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="NoiseTexture" id=2]
width = 64
height = 64
noise = SubResource( 1 )

[node name="RepairPanel" type="PanelContainer"]
margin_right = 110.0
margin_bottom = 96.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 158.0
margin_bottom = 89.0

[node name="GridContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 151.0
margin_bottom = 14.0
alignment = 1

[node name="Name" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 55.0
margin_right = 95.0
margin_bottom = 14.0
text = "Repair"

[node name="HFlowContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 151.0
margin_bottom = 82.0

[node name="Icon" type="TextureRect" parent="VBoxContainer/HFlowContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HFlowContainer"]
margin_left = 68.0
margin_right = 151.0
margin_bottom = 64.0

[node name="Description" type="Label" parent="VBoxContainer/HFlowContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 14.0
text = "Restore 5 HP"

[node name="Cost" type="Label" parent="VBoxContainer/HFlowContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 83.0
margin_bottom = 32.0
text = "Cost: 5"

[node name="BuyButton" type="Button" parent="VBoxContainer/HFlowContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 83.0
margin_bottom = 56.0
text = "Buy"

[connection signal="pressed" from="VBoxContainer/HFlowContainer/VBoxContainer/BuyButton" to="." method="_on_BuyButton_pressed"]
